Fix menu overlap on sub pages

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -426,6 +426,7 @@ main{
       margin-left: 25px;
       max-width: 100%;
       background: white;
+      z-index: 100;
    }
 }
 
